--- a/views/results-page.hbs
+++ b/views/results-page.hbs
@@ -1,7 +1,9 @@
 <h1>Search results</h1>
 
 <p>Here are the search results based on the following filters:</p>
-<li>Name: {{name}}</li>
-<li>Size: {{size}}</li>
-<li>Color: {{color}}</li>
+
+<ul>
+  {{#each movieTitles}}
+    <li>Name: {{title}}</li>
+  {{/each}}
 </ul>
